add title and style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <main class="weather">
+
+			<section class="hero">
+				<h1 class="hero__title">Weather Forecast</h1>
+			</section>
+
       <form action="" class="form" id="weather-form">
         <input type="text" class="form__input" id="weather-form__input" placeholder="Enter city name" />
         <button class="form__btn">
